--- a/src/main/java/com/blackflower/bingoll/StartingPagePanel.form
+++ b/src/main/java/com/blackflower/bingoll/StartingPagePanel.form
@@ -16,31 +16,6 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="169" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jTextField1" max="32767" attributes="0"/>
-                      <Component id="jLabel3" max="32767" attributes="0"/>
-                      <Component id="jLabel2" pref="173" max="32767" attributes="0"/>
-                  </Group>
-                  <Component id="jTextField2" min="-2" pref="173" max="-2" attributes="0"/>
-                  <Component id="jLabel5" min="-2" pref="173" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="445" max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="playerCountSpinner" alignment="1" min="-2" pref="87" max="-2" attributes="0"/>
-                  <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jLabel6" alignment="1" max="32767" attributes="0"/>
-                      <Component id="jComboBox2" alignment="1" min="-2" pref="191" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jLabel4" max="32767" attributes="0"/>
-                      <Component id="jComboBox1" min="-2" pref="191" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <EmptySpace min="-2" pref="222" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
@@ -59,7 +34,55 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="483" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="169" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="p4NameTextField" alignment="0" pref="173" max="32767" attributes="0"/>
+                          <Component id="p4NameLabel" alignment="0" pref="173" max="32767" attributes="0"/>
+                          <Component id="p3NameTextField" alignment="0" max="32767" attributes="0"/>
+                          <Component id="p3NameLabel" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="p4CardThemeLabel" alignment="1" max="32767" attributes="0"/>
+                              <Component id="p4ThemeCB" alignment="1" min="-2" pref="191" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="p3CardThemeLabel" alignment="1" max="32767" attributes="0"/>
+                              <Component id="p3ThemeCB" alignment="1" min="-2" pref="191" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="p1NameTextField" max="32767" attributes="0"/>
+                              <Component id="p1NameLabel" max="32767" attributes="0"/>
+                              <Component id="jLabel2" pref="173" max="32767" attributes="0"/>
+                          </Group>
+                          <Component id="p2NameTextField" min="-2" pref="173" max="-2" attributes="0"/>
+                          <Component id="p2NameLabel" min="-2" pref="173" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="445" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="playerCountSpinner" alignment="1" min="-2" pref="87" max="-2" attributes="0"/>
+                          <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="p2CardThemeLabel" alignment="1" max="32767" attributes="0"/>
+                              <Component id="p2ThemeCB" alignment="1" min="-2" pref="191" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" alignment="1" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="p1CardThemeLabel" max="32767" attributes="0"/>
+                              <Component id="p1ThemeCB" min="-2" pref="191" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="222" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -75,27 +98,47 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p1NameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p1CardThemeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p1NameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p1ThemeCB" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p2NameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p2CardThemeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p2NameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p2ThemeCB" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="p3NameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p3CardThemeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="p3NameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p3ThemeCB" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="p4NameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="p4CardThemeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="p4NameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="p4ThemeCB" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="88" max="32767" attributes="0"/>
               <Component id="startGameButton" min="-2" pref="33" max="-2" attributes="0"/>
-              <EmptySpace pref="142" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               <Component id="jSlider1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
@@ -135,64 +178,54 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="startGameButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel3">
+    <Component class="javax.swing.JLabel" name="p1NameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Player 1 Name:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="p1NameTextField">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
+        <Property name="text" type="java.lang.String" value="Player 1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="p1CardThemeLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Player 1 Card Theme:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox1">
+    <Component class="javax.swing.JComboBox" name="p1ThemeCB">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;CardColor&gt;"/>
       </AuxValues>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel5">
+    <Component class="javax.swing.JLabel" name="p2NameLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Player 1 Name:"/>
+        <Property name="text" type="java.lang.String" value="Player 2 Name:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="p2NameTextField">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
+        <Property name="text" type="java.lang.String" value="Player 2"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel6">
+    <Component class="javax.swing.JLabel" name="p2CardThemeLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Player 1 Card Theme:"/>
+        <Property name="text" type="java.lang.String" value="Player 2 Card Theme:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox2">
+    <Component class="javax.swing.JComboBox" name="p2ThemeCB">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;CardColor&gt;"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
@@ -204,6 +237,56 @@
       </Events>
     </Component>
     <Component class="javax.swing.JSlider" name="jSlider1">
+    </Component>
+    <Component class="javax.swing.JComboBox" name="p4ThemeCB">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;CardColor&gt;"/>
+      </AuxValues>
+    </Component>
+    <Component class="javax.swing.JLabel" name="p3NameLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Player 3 Name:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="p3NameTextField">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Player 3"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="p3CardThemeLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Player 3 Card Theme:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="p3ThemeCB">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;CardColor&gt;"/>
+      </AuxValues>
+    </Component>
+    <Component class="javax.swing.JLabel" name="p4NameLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Player 4 Name:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="p4NameTextField">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Player 4"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="p4CardThemeLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Player 4 Card Theme:"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
